# corepc

./: .gitignore  Cargo.toml  NAMING_FIX.md  OpenRPC.json  README.md  cmd.sh  compare.txt  compare_types.py  diffs  errs.txt  flatten_mods.py  flattened.rs  generated.rs  getblock.json  justfile  v25_2_0_openrpc.json  v26_2_0_openrpc.json
client/src/client_sync/v17/: control.rs  (+4 more)
codegen/: Cargo.toml  README.md
codegen/genv30/: blockchain.rs  mod.rs  util.rs
codegen/src/: generator.rs  lib.rs  main.rs  modules.rs  schema.rs
generated_v30/: blockchain.rs  control.rs  hidden.rs  mining.rs  mod.rs  network.rs  raw_transactions.rs  signer.rs  util.rs  wallet.rs
generated_v30_new/: mod.rs  raw_transactions.rs  signer.rs  wallet.rs
integration_test/tests/: blockchain.rs
spec_compare/: .gitignore  README.md  codegen.py  compare_types.py  flatten_mods.py  run.sh
spec_compare/codegen/: Cargo.toml  README.md
spec_compare/specs/: v24_2_0_openrpc.json  v27_2_0_openrpc.json  v28_3_0_openrpc.json  v29_3_0_openrpc.json
types/src/model/: blockchain.rs  mining.rs  mod.rs  raw_transactions.rs  wallet.rs
types/src/psbt/: error.rs
types/src/v17/: control.rs  mod.rs
types/src/v18/: mod.rs
types/src/v19/: mod.rs
types/src/v20/: mod.rs
types/src/v21/: mod.rs
types/src/v22/: mod.rs
types/src/v23/: mod.rs
types/src/v24/: mod.rs
types/src/v25/: mod.rs
types/src/v26/: mod.rs
types/src/v27/: mining.rs  mod.rs
types/src/v28/: mod.rs
types/src/v29/: mod.rs
types/src/v30/: mod.rs
verify/src/method/: v24.rs  v25.rs  v26.rs  v27.rs  v28.rs  v29.rs  v30.rs
(+68 files in other folders)
