[package]
name = "corepc-codegen"
version = "0.1.0"
authors = ["Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/corepc"
description = "Code generation tool for Bitcoin Core JSON-RPC API types from OpenRPC specification"
categories = ["development-tools::build-utils"]
keywords = ["bitcoin", "bitcoind", "json-rpc", "codegen"]
edition = "2021"
rust-version = "1.75.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.12.2"

[[bin]]
name = "corepc-codegen"
path = "src/main.rs"
